// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsScreen matches snapshot — dark 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#000",
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 100,
      }
    }
    contentInsetAdjustmentBehavior="automatic"
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "paddingBottom": 6,
              "paddingHorizontal": 32,
              "paddingTop": 20,
              "textTransform": "uppercase",
            },
            {
              "color": "rgba(235,235,245,0.6)",
            },
          ]
        }
      >
        APPEARANCE
      </Text>
      <View
        style={
          {
            "gap": 10,
            "marginHorizontal": 16,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1C1C1E",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#6E55FF",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Iris
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              A confident violet
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(235,235,245,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1C1C1E",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#007AFF",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Classic
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              iOS system blue
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(235,235,245,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1C1C1E",
              "borderColor": "#FF6B5C",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 6,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#FF6B5C",
              "shadowOffset": {
                "height": 8,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 22,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#FF6B5C",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Coral
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              Warm & energetic
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "backgroundColor": "#FF6B5C",
                  "borderColor": "#FF6B5C",
                },
              ]
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#fff",
                    "fontSize": 12,
                  },
                  undefined,
                  {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1C1C1E",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#00B894",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Mint
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              Fresh & clean
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(235,235,245,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1C1C1E",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#f5f5f7",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#FFFFFF",
                  },
                ]
              }
            >
              Mono
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              Crisp white for dark mode
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(235,235,245,0.6)",
                },
              ]
            }
          />
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "paddingBottom": 6,
              "paddingHorizontal": 32,
              "paddingTop": 20,
              "textTransform": "uppercase",
            },
            {
              "color": "rgba(235,235,245,0.6)",
            },
          ]
        }
      >
        ABOUT
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "marginHorizontal": 16,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#1C1C1E",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
          testID="how-it-works-row"
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#FFFFFF",
                },
              ]
            }
          >
            How It Works
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(235,235,245,0.3)",
                    "fontSize": 13,
                  },
                  undefined,
                  {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            style={
              [
                {
                  "bottom": 0,
                  "height": 0.5,
                  "left": 16,
                  "position": "absolute",
                  "right": 0,
                },
                {
                  "backgroundColor": "rgba(84,84,88,0.5)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#FFFFFF",
                },
              ]
            }
          >
            Send Feedback
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "rgba(235,235,245,0.3)",
                    "fontSize": 13,
                  },
                  undefined,
                  {
                    "fontFamily": "FontAwesome",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
          <View
            style={
              [
                {
                  "bottom": 0,
                  "height": 0.5,
                  "left": 16,
                  "position": "absolute",
                  "right": 0,
                },
                {
                  "backgroundColor": "rgba(84,84,88,0.5)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#FFFFFF",
                },
              ]
            }
          >
            Version
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 17,
                    "marginRight": 6,
                  },
                  {
                    "color": "rgba(235,235,245,0.6)",
                  },
                ]
              }
            >
              1.1.5
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "lineHeight": 18,
              "paddingBottom": 24,
              "paddingHorizontal": 32,
              "paddingTop": 8,
              "textAlign": "center",
            },
            {
              "color": "rgba(235,235,245,0.6)",
            },
          ]
        }
      >
        PasteClean keeps your formatting intact when pasting into Gmail. We strip dark-mode and inline styles that Gmail would render as invisible white-on-white.
      </Text>
    </View>
  </RCTScrollView>
  <View
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      testID="mock-bottom-sheet"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "space-between",
            "paddingBottom": 12,
            "paddingHorizontal": 22,
            "paddingTop": 6,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "700",
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#fff",
                },
              ]
            }
          >
            How PasteClean works
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "marginTop": 2,
                },
                {
                  "color": "rgba(235,235,245,0.65)",
                },
              ]
            }
          >
            An 8-step pipeline runs on every copy
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(255,255,255,0.12)",
              "borderRadius": 16,
              "height": 32,
              "justifyContent": "center",
              "opacity": 1,
              "width": 32,
            }
          }
          testID="pipeline-sheet-close"
        >
          <Text
            allowFontScaling={false}
            selectable={false}
            style={
              [
                {
                  "color": "#fff",
                  "fontSize": 14,
                },
                undefined,
                {
                  "fontFamily": "FontAwesome",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
                {},
              ]
            }
          >
            
          </Text>
        </View>
      </View>
      <View
        testID="mock-scroll"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1c1c1e",
              "borderRadius": 10,
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 12,
              "padding": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "rgba(255,255,255,0.4)",
                "fontFamily": "Menlo",
                "fontSize": 12,
                "fontWeight": "600",
              }
            }
          >
            INPUT
          </Text>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#ff8a80",
                "flex": 1,
                "fontFamily": "Menlo",
                "fontSize": 12,
              }
            }
          >
            &lt;style&gt;.x{color:#fff}&lt;/style&gt;…
          </Text>
        </View>
        <View
          style={
            {
              "gap": 10,
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#1c1c1e",
                  "borderColor": "rgba(255,255,255,0.06)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF28",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                01
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Inlines all CSS
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(235,235,245,0.65)",
                    },
                  ]
                }
              >
                Gmail ignores &lt;style&gt; blocks. We convert classes to inline style="".
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#1c1c1e",
                  "borderColor": "rgba(255,255,255,0.06)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF28",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                02
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Strips dangerous tags
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(235,235,245,0.65)",
                    },
                  ]
                }
              >
                &lt;script&gt; &lt;iframe&gt; &lt;form&gt; — gone. Only safe HTML survives.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#1c1c1e",
                  "borderColor": "rgba(255,255,255,0.06)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF28",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                03
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Removes unsupported CSS
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(235,235,245,0.65)",
                    },
                  ]
                }
              >
                position, transform, box-shadow, animation — stripped.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#1c1c1e",
                  "borderColor": "rgba(255,255,255,0.06)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF28",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                04
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Converts headings
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(235,235,245,0.65)",
                    },
                  ]
                }
              >
                &lt;h1&gt; → &lt;p style="font-size:22px;font-weight:bold"&gt;.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#1c1c1e",
                  "borderColor": "rgba(255,255,255,0.06)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF28",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                05
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Fixes invisible text
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(235,235,245,0.65)",
                    },
                  ]
                }
              >
                Light text on white? We darken it until WCAG contrast ≥ 3:1 — hue preserved.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#1c1c1e",
                  "borderColor": "rgba(255,255,255,0.06)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF28",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                06
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Strips dark backgrounds
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(235,235,245,0.65)",
                    },
                  ]
                }
              >
                background:#1a1a1a removed; text re-tinted to read on white.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#1c1c1e",
                  "borderColor": "rgba(255,255,255,0.06)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF28",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                07
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Forces explicit colors
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(235,235,245,0.65)",
                    },
                  ]
                }
              >
                Adds color:#000 and background:#fff so Gmail's dark mode can't invert anything.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#1c1c1e",
                  "borderColor": "rgba(255,255,255,0.06)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF28",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                08
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#fff",
                    },
                  ]
                }
              >
                Cleans up
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(235,235,245,0.65)",
                    },
                  ]
                }
              >
                Empty spans, redundant wrappers, orphan attributes — stripped.
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#0f172a",
              "borderRadius": 10,
              "flexDirection": "row",
              "gap": 8,
              "marginTop": 12,
              "padding": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "rgba(255,255,255,0.4)",
                "fontFamily": "Menlo",
                "fontSize": 12,
                "fontWeight": "600",
              }
            }
          >
            OUTPUT
          </Text>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#86efac",
                "flex": 1,
                "fontFamily": "Menlo",
                "fontSize": 12,
              }
            }
          >
            &lt;p style="color:#000"&gt;…&lt;/p&gt;
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`SettingsScreen matches snapshot — light 1`] = `
<View
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#f2f2f7",
      },
    ]
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "paddingBottom": 100,
      }
    }
    contentInsetAdjustmentBehavior="automatic"
    showsVerticalScrollIndicator={false}
    style={
      {
        "flex": 1,
      }
    }
  >
    <View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "paddingBottom": 6,
              "paddingHorizontal": 32,
              "paddingTop": 20,
              "textTransform": "uppercase",
            },
            {
              "color": "rgba(60,60,67,0.6)",
            },
          ]
        }
      >
        APPEARANCE
      </Text>
      <View
        style={
          {
            "gap": 10,
            "marginHorizontal": 16,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#6E55FF",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1C1C1E",
                  },
                ]
              }
            >
              Iris
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              A confident violet
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(60,60,67,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#007AFF",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1C1C1E",
                  },
                ]
              }
            >
              Classic
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              iOS system blue
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(60,60,67,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "#FF6B5C",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 6,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#FF6B5C",
              "shadowOffset": {
                "height": 8,
                "width": 0,
              },
              "shadowOpacity": 0.2,
              "shadowRadius": 22,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#FF6B5C",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1C1C1E",
                  },
                ]
              }
            >
              Coral
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              Warm & energetic
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "backgroundColor": "#FF6B5C",
                  "borderColor": "#FF6B5C",
                },
              ]
            }
          >
            <Text />
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#00B894",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1C1C1E",
                  },
                ]
              }
            >
              Mint
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              Fresh & clean
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(60,60,67,0.6)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "borderColor": "transparent",
              "borderRadius": 14,
              "borderWidth": 2,
              "elevation": 1,
              "flexDirection": "row",
              "gap": 14,
              "opacity": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 12,
              "shadowColor": "#000",
              "shadowOffset": {
                "height": 1,
                "width": 0,
              },
              "shadowOpacity": 0.06,
              "shadowRadius": 4,
            }
          }
        >
          <View
            style={
              [
                {
                  "borderRadius": 12,
                  "height": 38,
                  "width": 38,
                },
                {
                  "backgroundColor": "#1c1c1e",
                },
              ]
            }
          />
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 16,
                    "fontWeight": "700",
                  },
                  {
                    "color": "#1C1C1E",
                  },
                ]
              }
            >
              Mono
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 12,
                    "marginTop": 1,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              Adapts to your theme
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 11,
                  "borderWidth": 1.5,
                  "height": 22,
                  "justifyContent": "center",
                  "width": 22,
                },
                {
                  "borderColor": "rgba(60,60,67,0.6)",
                },
              ]
            }
          />
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "fontWeight": "600",
              "letterSpacing": 0.5,
              "paddingBottom": 6,
              "paddingHorizontal": 32,
              "paddingTop": 20,
              "textTransform": "uppercase",
            },
            {
              "color": "rgba(60,60,67,0.6)",
            },
          ]
        }
      >
        ABOUT
      </Text>
      <View
        style={
          [
            {
              "borderRadius": 12,
              "marginHorizontal": 16,
              "overflow": "hidden",
            },
            {
              "backgroundColor": "#FFFFFF",
            },
          ]
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
          testID="how-it-works-row"
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#1C1C1E",
                },
              ]
            }
          >
            How It Works
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text />
          </View>
          <View
            style={
              [
                {
                  "bottom": 0,
                  "height": 0.5,
                  "left": 16,
                  "position": "absolute",
                  "right": 0,
                },
                {
                  "backgroundColor": "rgba(60,60,67,0.18)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#1C1C1E",
                },
              ]
            }
          >
            Send Feedback
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text />
          </View>
          <View
            style={
              [
                {
                  "bottom": 0,
                  "height": 0.5,
                  "left": 16,
                  "position": "absolute",
                  "right": 0,
                },
                {
                  "backgroundColor": "rgba(60,60,67,0.18)",
                },
              ]
            }
          />
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "minHeight": 44,
              "opacity": 1,
              "paddingHorizontal": 16,
            }
          }
        >
          <Text
            style={
              [
                {
                  "flex": 1,
                  "fontSize": 17,
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#1C1C1E",
                },
              ]
            }
          >
            Version
          </Text>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                [
                  {
                    "fontSize": 17,
                    "marginRight": 6,
                  },
                  {
                    "color": "rgba(60,60,67,0.6)",
                  },
                ]
              }
            >
              1.1.5
            </Text>
          </View>
        </View>
      </View>
      <Text
        style={
          [
            {
              "fontSize": 13,
              "lineHeight": 18,
              "paddingBottom": 24,
              "paddingHorizontal": 32,
              "paddingTop": 8,
              "textAlign": "center",
            },
            {
              "color": "rgba(60,60,67,0.6)",
            },
          ]
        }
      >
        PasteClean keeps your formatting intact when pasting into Gmail. We strip dark-mode and inline styles that Gmail would render as invisible white-on-white.
      </Text>
    </View>
  </RCTScrollView>
  <View
    pointerEvents="box-none"
    style={
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      testID="mock-bottom-sheet"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "space-between",
            "paddingBottom": 12,
            "paddingHorizontal": 22,
            "paddingTop": 6,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            style={
              [
                {
                  "fontSize": 20,
                  "fontWeight": "700",
                  "letterSpacing": -0.4,
                },
                {
                  "color": "#1c1c1e",
                },
              ]
            }
          >
            How PasteClean works
          </Text>
          <Text
            style={
              [
                {
                  "fontSize": 14,
                  "marginTop": 2,
                },
                {
                  "color": "rgba(60,60,67,0.72)",
                },
              ]
            }
          >
            An 8-step pipeline runs on every copy
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "backgroundColor": "rgba(60,60,67,0.12)",
              "borderRadius": 16,
              "height": 32,
              "justifyContent": "center",
              "opacity": 1,
              "width": 32,
            }
          }
          testID="pipeline-sheet-close"
        >
          <Text />
        </View>
      </View>
      <View
        testID="mock-scroll"
      >
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#1c1c1e",
              "borderRadius": 10,
              "flexDirection": "row",
              "gap": 8,
              "marginBottom": 12,
              "padding": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "rgba(255,255,255,0.4)",
                "fontFamily": "Menlo",
                "fontSize": 12,
                "fontWeight": "600",
              }
            }
          >
            INPUT
          </Text>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#ff8a80",
                "flex": 1,
                "fontFamily": "Menlo",
                "fontSize": 12,
              }
            }
          >
            &lt;style&gt;.x{color:#fff}&lt;/style&gt;…
          </Text>
        </View>
        <View
          style={
            {
              "gap": 10,
            }
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#fff",
                  "borderColor": "rgba(60,60,67,0.1)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF14",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                01
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#1c1c1e",
                    },
                  ]
                }
              >
                Inlines all CSS
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(60,60,67,0.72)",
                    },
                  ]
                }
              >
                Gmail ignores &lt;style&gt; blocks. We convert classes to inline style="".
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#fff",
                  "borderColor": "rgba(60,60,67,0.1)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF14",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                02
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#1c1c1e",
                    },
                  ]
                }
              >
                Strips dangerous tags
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(60,60,67,0.72)",
                    },
                  ]
                }
              >
                &lt;script&gt; &lt;iframe&gt; &lt;form&gt; — gone. Only safe HTML survives.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#fff",
                  "borderColor": "rgba(60,60,67,0.1)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF14",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                03
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#1c1c1e",
                    },
                  ]
                }
              >
                Removes unsupported CSS
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(60,60,67,0.72)",
                    },
                  ]
                }
              >
                position, transform, box-shadow, animation — stripped.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#fff",
                  "borderColor": "rgba(60,60,67,0.1)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF14",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                04
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#1c1c1e",
                    },
                  ]
                }
              >
                Converts headings
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(60,60,67,0.72)",
                    },
                  ]
                }
              >
                &lt;h1&gt; → &lt;p style="font-size:22px;font-weight:bold"&gt;.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#fff",
                  "borderColor": "rgba(60,60,67,0.1)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF14",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                05
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#1c1c1e",
                    },
                  ]
                }
              >
                Fixes invisible text
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(60,60,67,0.72)",
                    },
                  ]
                }
              >
                Light text on white? We darken it until WCAG contrast ≥ 3:1 — hue preserved.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#fff",
                  "borderColor": "rgba(60,60,67,0.1)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF14",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                06
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#1c1c1e",
                    },
                  ]
                }
              >
                Strips dark backgrounds
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(60,60,67,0.72)",
                    },
                  ]
                }
              >
                background:#1a1a1a removed; text re-tinted to read on white.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#fff",
                  "borderColor": "rgba(60,60,67,0.1)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF14",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                07
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#1c1c1e",
                    },
                  ]
                }
              >
                Forces explicit colors
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(60,60,67,0.72)",
                    },
                  ]
                }
              >
                Adds color:#000 and background:#fff so Gmail's dark mode can't invert anything.
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "borderRadius": 14,
                  "borderWidth": 0.5,
                  "flexDirection": "row",
                  "gap": 12,
                  "padding": 14,
                },
                {
                  "backgroundColor": "#fff",
                  "borderColor": "rgba(60,60,67,0.1)",
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "borderRadius": 7,
                    "height": 28,
                    "justifyContent": "center",
                    "width": 28,
                  },
                  {
                    "backgroundColor": "#007AFF14",
                  },
                ]
              }
            >
              <Text
                style={
                  {
                    "color": "#007AFF",
                    "fontFamily": "Menlo",
                    "fontSize": 12,
                    "fontWeight": "700",
                  }
                }
              >
                08
              </Text>
            </View>
            <View
              style={
                {
                  "flex": 1,
                }
              }
            >
              <Text
                style={
                  [
                    {
                      "fontSize": 16,
                      "fontWeight": "600",
                      "letterSpacing": -0.1,
                      "marginBottom": 3,
                    },
                    {
                      "color": "#1c1c1e",
                    },
                  ]
                }
              >
                Cleans up
              </Text>
              <Text
                style={
                  [
                    {
                      "fontSize": 14,
                      "lineHeight": 19,
                    },
                    {
                      "color": "rgba(60,60,67,0.72)",
                    },
                  ]
                }
              >
                Empty spans, redundant wrappers, orphan attributes — stripped.
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#0f172a",
              "borderRadius": 10,
              "flexDirection": "row",
              "gap": 8,
              "marginTop": 12,
              "padding": 12,
            }
          }
        >
          <Text
            style={
              {
                "color": "rgba(255,255,255,0.4)",
                "fontFamily": "Menlo",
                "fontSize": 12,
                "fontWeight": "600",
              }
            }
          >
            OUTPUT
          </Text>
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#86efac",
                "flex": 1,
                "fontFamily": "Menlo",
                "fontSize": 12,
              }
            }
          >
            &lt;p style="color:#000"&gt;…&lt;/p&gt;
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
